# pipe_explorer

./: README.md  teleop_node_dd.py
ARPA-E_pipe_repair_robot/bash/: launch_robot_teleop.sh  launch_sensors.sh  setup_robot.sh  setup_sensors.sh
ARPA-E_pipe_repair_robot/data_compression/: package.xml  setup.cfg  setup.py
ARPA-E_pipe_repair_robot/data_compression/data_compression/: compress_realsense.py  compress_rgb.py  compress_thermal.py
ARPA-E_pipe_repair_robot/data_compression/launch/: data_compression.launch.py
ARPA-E_pipe_repair_robot/drivers/flir_lepton_ros_driver/: package.xml  setup.cfg  setup.py
ARPA-E_pipe_repair_robot/drivers/flir_lepton_ros_driver/flir_lepton_ros_driver/: thermal_cam_ros.py
ARPA-E_pipe_repair_robot/drivers/hebi_ros_driver/: package.xml  setup.cfg  setup.py
ARPA-E_pipe_repair_robot/drivers/hebi_ros_driver/hebi_ros_driver/: hebi_driver.py
ARPA-E_pipe_repair_robot/drivers/hebi_ros_driver/msg/: HebiFeedback.msg
ARPA-E_pipe_repair_robot/drivers/realsense-ros/realsense2_camera/launch/: #rs_launch.py#  rs_launch.py
ARPA-E_pipe_repair_robot/drivers/ximea_usb_ros_driver/: CMakeLists.txt  package.xml
ARPA-E_pipe_repair_robot/drivers/ximea_usb_ros_driver/cmake/: FindXIMEA.cmake
ARPA-E_pipe_repair_robot/drivers/ximea_usb_ros_driver/config/: multi_camera.yaml
ARPA-E_pipe_repair_robot/drivers/ximea_usb_ros_driver/include/ximea_usb_ros_driver/: Node.hpp  VisibilityControl.h
ARPA-E_pipe_repair_robot/drivers/ximea_usb_ros_driver/launch/: multi_camera.launch.py  single_camera.launch.py
ARPA-E_pipe_repair_robot/drivers/ximea_usb_ros_driver/src/: main.cpp
ARPA-E_pipe_repair_robot/drivers/ximea_usb_ros_driver/src/ximea_usb_ros_driver/: Node.cpp
ARPA-E_pipe_repair_robot/motion_planning/: package.xml  setup.cfg  setup.py
ARPA-E_pipe_repair_robot/motion_planning/launch/: teleop.launch.py  teleop_dd.launch.py
ARPA-E_pipe_repair_robot/motion_planning/motion_planning/: imu_extractor.py  imu_extractor.py~  teleop_node.py  teleop_node_dd.py  teleop_node_dd_copy.py
ARPA-E_pipe_repair_robot/perception/: package.xml  setup.py
ARPA-E_pipe_repair_robot/perception/launch/: sensors.launch.py
ARPA-E_pipe_repair_robot/perception/perception/: image_stitching.py
piperobot_keycmds/: CMakeLists.txt  package.xml
piperobot_keycmds/src/: teleop_piperobot_key.cpp
rs_hello_imshow/: CMakeLists.txt  package.xml
rs_hello_imshow/include/examples/: example.hpp
rs_hello_imshow/src/: camera_cv_node.cpp  camera_cv_topics_node.cpp  camera_cv_topics_node.cpp~  camera_cv_yolo_main.py~  node.cpp  preset_custom.json  preset_depth_circles.json  preset_given_shortrange.json  subscriber_node.cpp
rs_yolo/: package.xml  setup.cfg  setup.py
rs_yolo/rs_yolo/: camera_cv_yolo_OLDmain.py  camera_cv_yolo_TESTmain.py~  camera_cv_yolo_main.py  camera_cv_yolo_main.py~  camera_cv_yolo_node.py  camera_cv_yolo_node.py~
rs_yolo/rs_yolo/YOLOv8 Code/: yolo_code_ros
rs_yolo/rs_yolo/YOLOv8 Code/train32/: args.yaml  events.out.tfevents.1696559400.mrsd.3048.0  results.csv
rs_yolo/rs_yolo/YOLOv8 Code/train32/weights/best/: data.pkl
rs_yolo/rs_yolo/YOLOv8 Code/train32/weights/best/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+257 more)
rs_yolo/rs_yolo/YOLOv8 Code/train32/weights/last/: data.pkl
rs_yolo/rs_yolo/YOLOv8 Code/train32/weights/last/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+257 more)
rs_yolo/rs_yolo/YOLOv8 Version 2 Trained/train10/: args.yaml  events.out.tfevents.1698790755.mrsd.2349.0  results.csv
