<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ximea_usb_ros_driver</name>
  <version>0.0.0</version>
  <description>The ximea_usb_ros_driver package</description>
  <maintainer email="ajinkyak@andrew.cmu.edu">Ajinkya Kamat</maintainer>
  <license>Copyright Birobotics Lab, CMU</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>camera_info_manager</depend>
  <depend>class_loader</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ros2launch</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>